change button text

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 							<h2>OFIR EVEN</h2>
 							<p>CISO & Cybersecurity Architect</p>
 							<ul class="actions special">
-								<li><a href="https://www.linkedin.com/in/ofirev/" class="button primary">Get in Touch</a></li>
+								<li><a href="https://www.linkedin.com/in/ofirev/" class="button primary">Connect</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
