--- a/index.html
+++ b/index.html
@@ -146,14 +146,14 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/ofirev/" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://x.com/MadPageup/" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="https://www.instagram.com/ofir.even.pub/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="https://www.infosecday.com/" class="icon brands fa-dribbble"><span class="label">Blog</span></a></li>
 							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>Copyright &copy; 2024 Ofir Even</li>
 						</ul>
 					</footer>
 
