fixing links in footer

--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
 							<li><a href="https://x.com/MadPageup/" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://www.linkedin.com/in/ofirev/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://www.instagram.com/ofir.even.pub/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon solid fa-github"><span class="label">Email</span></a></li>
+							<li><a href="https://www.infosecday.com/" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
+							<li><a href="https://github.com/pageup83/" class="icon brands fa-github"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
 							<li>Copyright &copy; 2024 Ofir Even</li>
