buttom button fix

--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
 								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
 							</header>
 							<ul class="actions stacked">
-								<li><a href="#" class="button fit primary">Activate</a></li>
-								<li><a href="#" class="button fit">Learn More</a></li>
+								<li><a href="https://www.linkedin.com/in/ofirev/" class="button fit primary">Connect</a></li>
+								<li><a href="#" class="button fit">More</a></li>
 							</ul>
 						</div>
 					</section>
