--- a/index.html
+++ b/index.html
@@ -69,25 +69,25 @@
 
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
-						<section class="spotlight">
+						<section id="expertise-spotlight" class="spotlight">
 							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>Expertise Title<br />
+								Line 2 of Expertise</h2>
+								<p>Description related to Expertise.</p>
 							</div>
 						</section>
-						<section class="spotlight">
+						<section id="passion-spotlight" class="spotlight">
 							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Tortor dolore feugiat<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>Passion Title<br />
+								Line 2 of Passion</h2>
+								<p>Description related to Passion.</p>
 							</div>
 						</section>
-						<section class="spotlight">
+						<section  id="information-security-spotlight" class="spotlight">
 							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>Information Security Title<br />
+								Line 2 of InfoSec</h2>
+								<p>Description related to Information Security.</p>
 							</div>
 						</section>
 					</section>
