--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 								into secure solutions.</p>
 							</header>
 							<ul class="icons major">
-								<li><span class="icon fa-gem major style1"><span class="label">Expertise</span></span></li>
-								<li><span class="icon fa-heart major style2"><span class="label">Passion</span></span></li>
-								<li><span class="icon solid fa-user-lock major"><span class="label">Information Security</span></span></li>
+								<li><a href="#expertise-spotlight"></a><span class="icon fa-gem major style1"><span class="label">Expertise</span></span></li>
+								<li><a href="#passion-spotlight"></a><span class="icon fa-heart major style2"><span class="label">Passion</span></span></li>
+								<li><a href="#information-security-spotlight"></a><span class="icon solid fa-user-lock major"><span class="label">Information Security</span></span></li>
 							</ul>
 						</div>
 					</section>
