Spotlight Section Updates

--- a/index.html
+++ b/index.html
@@ -71,23 +71,23 @@
 					<section id="two" class="wrapper alt style2">
 						<section id="expertise-spotlight" class="spotlight">
 							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Expertise Title<br />
-								Line 2 of Expertise</h2>
-								<p>Description related to Expertise.</p>
+								<h2>Leading Risk Management<br />
+								for Complex Networks</h2>
+								<p>With over 12 years of experience in the field, I’ve developed deep expertise in cybersecurity, focusing on risk management, networking, and implementing comprehensive security solutions. I have worked with large organizations, securing complex infrastructures and providing strategic security advice tailored to each organization’s unique needs.</p>
 							</div>
 						</section>
 						<section id="passion-spotlight" class="spotlight">
 							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Passion Title<br />
-								Line 2 of Passion</h2>
-								<p>Description related to Passion.</p>
+								<h2>Driven by Passion<br />
+								for Cyber Defense</h2>
+								<p>Cybersecurity is not just a job for me—it's a passion. I thrive on solving complex security challenges and staying ahead of emerging threats. My drive is fueled by the knowledge that I’m making systems more secure and organizations more resilient, leading to a safer digital landscape.</p>
 							</div>
 						</section>
 						<section  id="information-security-spotlight" class="spotlight">
 							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Information Security Title<br />
-								Line 2 of InfoSec</h2>
-								<p>Description related to Information Security.</p>
+								<h2>Commanding Cyber Risk Management<br />
+								with Technical Precision</h2>
+								<p>As a CISO with a strong technical foundation in networking, I lead cybersecurity efforts with an emphasis on risk management and precision. My deep technical knowledge allows me to ask the right questions, make informed decisions, and deliver solutions that protect critical systems in industries like banking, insurance, and government.</p>
 							</div>
 						</section>
 					</section>
