Spotlight #3 Text & Pic

--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
 						</section>
 						<section  id="information-security-spotlight" class="spotlight">
 							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Commanding Cyber Risk Management<br />
+								<h2>Steering Cybersecurity Risks<br />
 								with Technical Precision</h2>
-								<p>As a CISO with a strong technical foundation in networking, I lead cybersecurity efforts with an emphasis on risk management and precision. My deep technical knowledge allows me to ask the right questions, make informed decisions, and deliver solutions that protect critical systems in industries like banking, insurance, and government.</p>
+								<p>With a strong technical foundation and extensive experience in securing critical systems, I lead cybersecurity efforts by managing risks with precision and foresight. From banking to government sectors, my expertise ensures that complex infrastructures are protected with strategic oversight and innovative security architecture.</p>
 							</div>
 						</section>
 					</section>
