updating section Three Title and Paragraph

--- a/index.html
+++ b/index.html
@@ -96,9 +96,11 @@
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Accumsan mus tortor nunc aliquet</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>Core Cybersecurity Expertise</h2>
+								<p>With over a decade of technical hands-on experience, I bring a unique ability<br />
+								<p>to understand complex systems and implement effective solutions. My technical expertise <br />
+								<p>enables me to approach cybersecurity challenges with precision and confidence, ensuring <br />
+								that even the most intricate issues are addressed efficiently.</p>
 							</header>
 							<ul class="features">
 								<li class="icon fa-paper-plane">
