--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 							<header class="major">
 								<h2>Core Cybersecurity Expertise</h2>
 								<p>With over a decade of technical hands-on experience, I bring a unique ability<br />
-								<p>to understand complex systems and implement effective solutions. My technical expertise <br />
-								<p>enables me to approach cybersecurity challenges with precision and confidence, ensuring <br />
+								to understand complex systems and implement effective solutions. My technical expertise <br />
+								enables me to approach cybersecurity challenges with precision and confidence, ensuring <br />
 								that even the most intricate issues are addressed efficiently.</p>
 							</header>
 							<ul class="features">
