3rd section - 6 cubes content update

--- a/index.html
+++ b/index.html
@@ -104,28 +104,28 @@
 							</header>
 							<ul class="features">
 								<li class="icon fa-paper-plane">
-									<h3>Arcu accumsan</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>Cyber Risk Management</h3>
+									<p>Leading risk management strategies to identify, assess, and mitigate cybersecurity threats across critical infrastructures.</p>
 								</li>
 								<li class="icon solid fa-laptop">
-									<h3>Ac Augue Eget</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon solid fa-code">
-									<h3>Mus Scelerisque</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon solid fa-headphones-alt">
-									<h3>Mauris Imperdiet</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>Network or architecture diagram</h3>
+									<p>Designing and implementing secure, scalable network infrastructures to protect business operations and ensure resilience.</p>
 								</li>
 								<li class="icon fa-heart">
-									<h3>Aenean Primis</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>Cybersecurity Strategy & Leadership</h3>
+									<p>Driving cybersecurity strategy and leading cross-functional teams to ensure robust, enterprise-wide security measures.</p>
 								</li>
 								<li class="icon fa-flag">
-									<h3>Tortor Ut</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>Crisis Management & Incident Response</h3>
+									<p>Providing rapid, strategic incident response to mitigate breaches, minimize damage, and safeguard critical assets.</p>
+								</li>
+								<li class="icon solid fa-code">
+									<h3>Cybersecurity Audits & Compliance</h3>
+									<p>Conducting comprehensive security audits to ensure adherence to compliance frameworks and industry best practices.</p>
+								</li>
+								<li class="icon solid fa-headphones-alt">
+									<h3>Data Protection & Encryption</h3>
+									<p>Implementing advanced data protection strategies, including encryption, to safeguard sensitive information.</p>
 								</li>
 							</ul>
 						</div>
