6 cubes - first icon fix

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 								that even the most intricate issues are addressed efficiently.</p>
 							</header>
 							<ul class="features">
-								<li class="icon fa-shield-alt">
+								<li class="icon solid fa-shield-alt">
 									<h3>Cyber Risk Management</h3>
 									<p>Leading risk management strategies to identify, assess, and mitigate cybersecurity threats across critical infrastructures.</p>
 								</li>
