6 cubes - updating all icons

--- a/index.html
+++ b/index.html
@@ -107,23 +107,23 @@
 									<h3>Cyber Risk Management</h3>
 									<p>Leading risk management strategies to identify, assess, and mitigate cybersecurity threats across critical infrastructures.</p>
 								</li>
-								<li class="icon solid fa-laptop">
-									<h3>Network or architecture diagram</h3>
+								<li class="icon solid fa-sitemap">
+									<h3>Security Architecture & Design</h3>
 									<p>Designing and implementing secure, scalable network infrastructures to protect business operations and ensure resilience.</p>
 								</li>
-								<li class="icon fa-heart">
+								<li class="icon solid fa-user-shield">
 									<h3>Cybersecurity Strategy & Leadership</h3>
 									<p>Driving cybersecurity strategy and leading cross-functional teams to ensure robust, enterprise-wide security measures.</p>
 								</li>
-								<li class="icon fa-flag">
+								<li class="icon solid fa-exclamation-triangle">
 									<h3>Crisis Management & Incident Response</h3>
 									<p>Providing rapid, strategic incident response to mitigate breaches, minimize damage, and safeguard critical assets.</p>
 								</li>
-								<li class="icon solid fa-code">
+								<li class="icon solid fa-clipboard-check">
 									<h3>Cybersecurity Audits & Compliance</h3>
 									<p>Conducting comprehensive security audits to ensure adherence to compliance frameworks and industry best practices.</p>
 								</li>
-								<li class="icon solid fa-headphones-alt">
+								<li class="icon solid fa-lock">
 									<h3>Data Protection & Encryption</h3>
 									<p>Implementing advanced data protection strategies, including encryption, to safeguard sensitive information.</p>
 								</li>
