--- a/index.html
+++ b/index.html
@@ -135,12 +135,12 @@
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
-								<h2>Arcue ut vel commodo</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
+								<h2>Let's Secure Your Future</h2>
+								<p>Ready to enhance your cybersecurity posture? Connect with me to explore how I can help safeguard your organization.</p>
 							</header>
 							<ul class="actions stacked">
 								<li><a href="https://www.linkedin.com/in/ofirev/" class="button fit primary">Connect</a></li>
-								<li><a href="#" class="button fit">More</a></li>
+								<li><a href="#" class="button fit">Explore Services</a></li>
 							</ul>
 						</div>
 					</section>
